<resources>
    <string name="app_name">KioskOnline</string>
    <string name="action_settings">Settings</string>
    <string name="Open">Open</string>
    <string name="signup">S\'inscrire </string>
    <string name="Close">Close</string>
    <string name="reload">Actualiser</string>
    <string name="password">Mot de passe</string>
    <string name="email">Email</string>
    <string name="name">Nom</string>
    <string name="firstName">Prénoms</string>
    <string name="passconf">Confirmation mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="member">Déjà membre? Se connecter</string>
    <string name="signuplink">Pas encore de compte? Créer</string>
    <string name="createAccount">Créer compte</string>
    <string name="slogan">La plateforme d\'accès aux documents numériques</string>
    <string name="noInternet">Serveur inaccessible</string>
    <string name="noDocInLibrary">Aucun document dans votre bibliothèque</string>
    <string name="noDocInShopCart">Aucun article dans votre panier</string>
    <string name="biblioLabel">Bibliothèque</string>
    <string name="panierLabel">Votre panier courant</string>
    <string name="createAccLabel">Création de compte</string>
    <string name="connectLabel">Connexion</string>
</resources>
