<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView android:src="@mipmap/logo_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_gravity="center_horizontal" />
        <TextView android:id="@+id/text_accueil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textColor="@color/colorTextbottomTool"
            android:text="@string/slogan"
            android:gravity="center"
            android:textSize="16dip"
            android:textStyle="bold|italic"
            android:layout_gravity="center_horizontal"/>
        <android.widget.Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@color/colorTextbottomTool"
            android:textColor="@color/colorWhite"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"/>
        <android.widget.Button
            android:id="@+id/btn_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/createAccount"
            android:background="@color/colorTextbottomTool"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
